# page_object_gen

./: .gitignore  README.md  pyproject.toml
src/pog/: cli.py
src/pog/codegen/: generic_pom.py
src/pog/graph/: build_graph.py  nodes.py  refs_agent.py  run.py  state.py
src/pog/llm/: derive_and_codegen.py  openai_client.py  style_contract_v0_2.py
src/pog/tools/: dom_simplify.py  dotnet_build.py  file_writer.py  refs_loader.py  selenium_capture.py  sln_finder.py  trace_writer.py
src/pog/utils/: logging.py
tests/: test_sln_finder.py
