[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pog"
version = "0.0.1"
description = "POM generator CLI powered by LangGraph (MVP skeleton)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "selenium>=4.17.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.1.0"
]

[project.scripts]
pog = "pog.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
